Fixed positioning and spacing of elements.

--- a/index.css
+++ b/index.css
@@ -20,3 +20,12 @@ main {
     flex-direction: column;
     justify-content: space-between;
 }
+
+div.top {
+    display: flex;
+    justify-content: space-between;
+}
+
+h1.time {
+    text-align: center;
+}
